css/style.css
body {
  margin: 0;
  /*background-color: #000;*/
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

#thumbnail-container {
  font-size: 0;
  /*height: 100%;*/
  /*background: #c0c0c0;*/
  width: 90%;
  max-width: 1280px;
  margin: 0 auto;
  /*text-align: center;*/
}

#thumbnail-container:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;

  /* For visualization
  background: #808080; width: 5px;
  */
}

.thumbnail {
  display: inline-block;
  vertical-align: middle;
  position: relative;
  width: calc(25% - 1px);
  margin-right: 1px;
  margin-bottom: 1px;
  /*background-color: rgba(255, 255, 255, 0.2);*/
  text-align: center;
}

.clickable:hover {
    cursor: pointer;
}

.thumbnail-background {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 70%;
    height: 50%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    /*display: inline-block;*/
}

.settings-thumbnail {
  width: calc(12.5% - 1px);
}

.links-bar {
    /*color: #999;*/
    /*font-family: 'Open Sans';*/
    /*font-weight: 700;*/
    /*font-size: 1.1em;*/
    position: fixed;
    /*text-shadow: 1px 1px 1px #000*/
}

.links-bar-node {
    /*color: white;*/
    text-decoration: none;
}
.links-bar-node:hover {
    cursor: pointer;
    text-decoration: underline;;
}

.lb-top {
    top: 0.6em;
}
.lb-bott {
    bottom: 0.6em;
}
.lb-right {
    right: 0.6em;
}
.lb-left {
    left: 0.6em;
}

.hidden, .hidden:hover {
  opacity: 0;
  cursor: default;
  background: none;
}

#settings {
  opacity: 0.05;
  width: 1em;
  height: 1em;
  position: fixed;
  bottom: 1em;
  left: calc(50% - 0.5em);
}

#settings:hover {
  opacity: 1;
  cursor: pointer;
}

